# simple-ftxui

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
cmake/: postinst  prerm
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/keyboard/: CMakeLists.txt  keyboard.cpp
src/app/monitor/: CMakeLists.txt  monitor.cpp
src/app/starter/: CMakeLists.txt  starter.cpp
src/tui_component/: CMakeLists.txt
src/tui_component/include/tui_component/: window.hpp
src/tui_component/src/: window.cpp
